--- a/style.css
+++ b/style.css
@@ -17,9 +17,4 @@ color: #D4AF37;
 border-left: 4px solid #8B0000;
 font-style: italic;
 }
-@font-face {
-font-family: “Pudelinka”;
-src: url(”Fonts/pudelinka.ttf” ) format('truetype’);
-font-weight: normal;
-font-style: normal;
-}
+p.quote { font-family: “Pudelinka”, cursive;}
