--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-@font-face {
+font-face {
 	font-family: "Pudelinka";
-	src: url("Fonts/pudelinka.ttf") format("truetype");
+	src: url("Fonts/pudelinka.ttf")format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
-
 body {
 	background-color: #d2b48c;
 	margin-left: 20%;
