--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 font-face {
-	font-family: "Pudelinka";
-	src: url("Fonts/pudelinka.ttf")format("truetype");
+	font-family: “Pudelinka”;
+	src: url(”Fonts/pudelinka.ttf” )('truetype’);
 	font-weight: normal;
 	font-style: normal;
 }
+
 body {
 	background-color: #d2b48c;
 	margin-left: 20%;
